06_rect/grade.txt
Grading at Wed Jul 22 11:55:04 UTC 2020
Attempting to compile rectangle.c
rectangle.c: In function ‘intersection’:
rectangle.c:67:1: error: ISO C forbids nested functions [-Werror=pedantic]
 void printRectangle(rectangle r) {
 ^
rectangle.c:78:1: error: ISO C forbids nested functions [-Werror=pedantic]
 int main (void) {
 ^
rectangle.c:78:5: error: ‘main’ is normally a non-static function [-Werror=main]
 int main (void) {
     ^
rectangle.c:183:1: error: expected declaration or statement at end of input
 }
 ^
rectangle.c:183:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
